--- a/mercadofrontend/src/styles.css
+++ b/mercadofrontend/src/styles.css
@@ -659,6 +659,8 @@ por lo cual no es necesario estar pegando este mismo estilo en todos las vistas 
    padding-left: var(--bs-gutter-x, 0.75rem);
    margin-right: auto;
    margin-left: auto;
+   margin-top: 10px;
+   margin-bottom: 10px;
  }
  
  @media (min-width: 576px) {
